Adding Swagger documentation & Auth API.
